[gd_scene load_steps=3 format=3 uid="uid://c6et65lkb71bw"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_roakc"]

[sub_resource type="GDScript" id="GDScript_gc13d"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	if not OS.has_feature(\"editor\"): 
		queue_free()
		return
	
	var textures : Array = [preload(\"res://Textures/placeholder_car_3.png\"), preload(\"res://Textures/formula.png\"), preload(\"res://Textures/auto_vitor_2.png\")]
	
	for t in range(textures.size()):
		for i in Palettes.PALETTES:
			var button = Button.new()
			button.size = Vector2(48, 92)
			button.position.x = i * 48
			button.position.y = t * 92
			button.pressed.connect(_on_palette_pressed.bind(t, i))
			
			add_child(button)
			
			var sprite = Sprite2D.new()
			sprite.texture = textures[t]
			sprite.position.x = 24
			sprite.position.y = 46
#			sprite.rotation_degrees = 15
			sprite.material = ShaderMaterial.new()
			sprite.material.shader = preload(\"res://Scripts/palette_replacer.gdshader\")
			sprite.material.set_shader_parameter(\"palette\", Palettes.PALETTES[i].duplicate())
			sprite.material.set_shader_parameter(\"active\", true)
			
			button.add_child(sprite)

func _on_palette_pressed(model, palette):
	Net.player_info[\"palette\"] = palette
	Net.player_info[\"car_model\"] = model
"

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_roakc")

[node name="create_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_right = 97.5
offset_bottom = 40.0
grow_horizontal = 2
text = "Create game"

[node name="join_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = 48.0
offset_right = 97.5
offset_bottom = 88.0
grow_horizontal = 2
text = "Join game"

[node name="ip_line" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 111.0
offset_right = 99.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "ip address"

[node name="name_line" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 153.0
offset_right = 99.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Name"

[node name="palette_temp" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -320.0
offset_right = -440.0
offset_bottom = -280.0
script = SubResource("GDScript_gc13d")

[connection signal="pressed" from="create_button" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="join_button" to="." method="_on_join_button_pressed"]
